# multi-link-cartpole-rl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: five_link_easy.yaml  five_link_hard.yaml  single_link.yaml  single_link_swingup.yaml  single_link_swingup_upright_curriculum.yaml  three_link.yaml  two_link.yaml
docs/: ARCHITECTURE.md  CODEX_THREADING_GUIDE.md  DECISION_LOG.md  IMPLEMENTATION_PROMPTS.md  MILESTONES.md  PROJECT_BRIEF.md  ROADMAP.md
docs/learning/: 00_rl_big_picture.md  01_gymnasium_environment_api.md  02_cartpole_physics_intuition.md  03_observations_actions_rewards.md  04_ppo_plain_english.md  05_training_debugging_checklist.md
scripts/: evaluate.py  play_manual.py  plot_results.py  render_policy.py  render_random.py  train.py
src/multi_link_cartpole_rl/: __init__.py
src/multi_link_cartpole_rl/envs/: __init__.py  multi_link_cartpole.py  single_link_cartpole.py
src/multi_link_cartpole_rl/rendering/: __init__.py  play_manual.py  render_policy.py  render_random.py
src/multi_link_cartpole_rl/training/: __init__.py  evaluate_policy.py  plot_results.py  reporting.py  train_ppo.py
src/multi_link_cartpole_rl/utils/: __init__.py  config.py  experiment.py
tests/: test_import.py  test_milestone_1b.py  test_milestone_1c_reporting.py  test_single_link_cartpole.py  test_single_link_swingup.py
