[project]
name = "multi-link-cartpole-rl"
version = "0.1.0"
description = "Learning-focused reinforcement learning project for staged multi-link cartpole control."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium",
    "matplotlib",
    "mujoco",
    "numpy",
    "pyyaml",
    "stable-baselines3",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
cartpole-train = "multi_link_cartpole_rl.training.train_ppo:main"
cartpole-evaluate = "multi_link_cartpole_rl.training.evaluate_policy:main"
cartpole-plot-results = "multi_link_cartpole_rl.training.plot_results:main"
cartpole-render-policy = "multi_link_cartpole_rl.rendering.render_policy:main"
cartpole-render-random = "multi_link_cartpole_rl.rendering.render_random:main"
cartpole-play-manual = "multi_link_cartpole_rl.rendering.play_manual:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
